Replace Integer/Long constructor calls deprecated in java 9